force-app/main/default/src/objects/HealthCloudGA__HcHelpTray__mdt/HealthCloudGA__HcHelpTray__mdt.object-meta.xml
<CustomObject>
    <label>HcHelpTray</label>
    <pluralLabel>HcHelpTray</pluralLabel>
</CustomObject>