force-app/main/default/src/objects/HealthCloudGA__HcHelpTray__mdt/fields/HealthCloudGA__ContentType__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ContentType__c</fullName>
    <label>ContentType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Help Doc</fullName>
                <default>true</default>
                <label>Help Doc</label>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>