force-app/main/default/src/objects/HealthCloudGA__HcHelpTray__mdt/fields/HealthCloudGA__HelpUrl__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__HelpUrl__c</fullName>
    <label>Help Url</label>
    <type>Url</type>
</CustomField>