force-app/main/default/src/objects/HealthCloudGA__HcHelpTray__mdt/fields/HealthCloudGA__IconPath__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__IconPath__c</fullName>
    <label>Icon path</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>