force-app/main/default/src/objects/HealthCloudGA__HcHelpTray__mdt/fields/HealthCloudGA__Type__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Type__c</fullName>
    <label>Type</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>